# Ur5_kitchen

./: .gitignore  README.md
action_library/: CMakeLists.txt  package.xml  setup.py
action_library/scripts/: action_library_node.py  exec_action_sequence_node.py
action_library/src/action_library/: action_library.py  arm_interface.py  gripper_interface.py  tf.py
action_library/srv/: ExecuteActionSequence.srv
aruco_ros/aruco_ros/src/: simple_single.cpp
ecnu_moveit_config/: .setup_assistant
ecnu_moveit_config/config/: ur5_robot.srdf
ecnu_moveit_config/launch/: moveit.rviz
ur_robotiq_gazebo/: CMakeLists.txt
ur_robotiq_gazebo/launch/: hangzhou.launch  my_world.launch  ur5_bringup.launch
ur_robotiq_gazebo/launch/inc/: ur_control.launch.xml
ur_robotiq_gazebo/scripts/: FakeLLM.py  SimHangzhou.py  action_lib.py  test_action_lib.py
ur_robotiq_gazebo/urdf/: _d435.urdf.xacro  ur.xacro
ur_robotiq_gazebo/world/: Oldtest.world  hangzhou.world  hangzhouOLD.world  test.world
